--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libkrb5admin-perl (0.3.14) unstable; urgency=low
+
+  * Fix a few locking issues
+
+ -- Roland C. Dowdeswell <roland.dowdeswell@twosigma.com>  Mon, 21 Aug 2017 21:13:00 +0000
+
 libkrb5admin-perl (0.3.13) unstable; urgency=low
 
   * install krb5_host
