--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -235,7 +235,9 @@ The commands
 etc. are equivalent to their _subject variants except that they set
 type=group automatically.
 .Pp
-The following keys are defined for subjects: type, owner
+The following keys are defined for subjects: type
+.Po either Do krb5 Dc or Do group Dc Pc ,
+owner
 .Pq set-based ,
 and member
 .Pq set-based .
