krb5_host.1: include derived key comands

--- a/man/krb5_admin.1
+++ b/man/krb5_admin.1
@@ -100,8 +100,9 @@ that they just performed.
 The downside is that transferring ownership becomes a two step
 process where the original owner adds a new owner and then the new
 owner removes the old owner.
+.Ss General Commands
+Commands which provide general information:
 .Pp
-General commands:
 .Bl -ohang -offset ind
 .It master
 outputs the name of the master KDC.
